test/bad/function_declaration_08.mpp
fun f(a:int):MyType { return 1; };
